<resources>
    <string name="app_name">agSenseApp</string>
    <string name="username_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="login_btn_text">Login</string>


    <string name="account_dashboard_title">AgSense - Account Name Dashboard</string>
    <string name="AdminNotification">Admin Notifications</string>

    <string name="search_account_hint">Search account…</string>
    <string name="search_device_hint">Search device…</string>

    <string name="faultyAccountsString">Faulty accounts</string>
    <string name="healthyAccountsString">Healthy accounts</string>
    <string name="faultyDevicesString">Faulty devices</string>
    <string name="healthyDevicesString">Healthy devices</string>
    <string name="healthCareReportsString">Healthcare reports</string>
    <string name="unreadNotificationsString">Unread notifications</string>
    <string name="devicesSettingsString">Device settings</string>
    <string name="otherString">Other</string>
    <string name="filterString">Filter</string>
    <string name="mapString">Map</string>
    <string name="deviceStatusTitle">Device status</string>

    <string name="accountstatus">Account Status</string>

    <string name="reset">Reset</string>

    <string name="filterDevices">Filter Devices</string>
    <string name="deviceType">Device Type</string>
    <string name="healthyOrFaultyDevices">Healthy / Faulty Devices</string>
    <string name="healthyDevices">Healthy Devices</string>
    <string name="faultyDevices">Faulty Devices</string>


    <string name="Filter">Filter</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>

    <string name="fromDate">From date</string>
    <string name="toDate">To date</string>
    <string name="search">Search</string>

    <string name="date">dd/mm/yyyy</string>

    <string name="display_faulty">Display faulty</string>
    <string name="display_healthy">Display Healthy</string>
    <string name="device_settings">Device Settings</string>
    <string name="HealthCareDashboard">Healthcare Dashboard</string>
    <string name="NewAccount">New Account</string>
    <string name="EditAccount">Edit Account</string>
    <string name="NewDevice">New Device</string>
    <string name="EditDevice">Edit Device</string>
    <string name="alertString">Speeding Alert and Geo-Fence</string>
    <string name="title_activity_maps">Map</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="speed">Speed</string>
    <string name="speedalertgeosetting">speedAlertGeoSetting</string>
    <string name="authorizationsetting">authorizationSetting</string>
    <string name="authorization_number">Authorization Number</string>
    <string name="speeding_alert_and_geo_fence">Speeding Alert and Geo-Fence</string>

    <string name="authorized_num_1">Authorized Number </string>
    <string name="update_btn_device_settings">Update</string>
    <string name="heading_dir_deg">Heading dir.(deg)</string>
    <string name="distance_m">Distance (m)</string>
    <string name="tracking_interval_2_s">Tracking interval 2 (s)</string>
    <string name="tracking_interval_1_s">Tracking interval 1 (s)</string>
    <string name="_numbersdevicesettings">0-65535</string>
    <string name="devicesettingsspeed">0-255 km/h</string>
    <string name="longitude1">longitude 1</string>
    <string name="longitude2">longitude 2</string>
    <string name="latitude1">latitude 1</string>
    <string name="latitude2">latitude 2</string>
    <string name="device_settings_degree">0-359</string>
    <string name="longitudelimit">000-0000-000 - 999-9999-999</string>
    <string name="latitudelimit">00.000000 - 99.999999</string>
    <string name="devicesettingslimit">000.0000000 - 999.999999</string>
    <string name="settings">Settings</string>

    <string name="new_device_details">New Device Details:</string>
    <string name="iemi">IEMI</string>
    <string name="device_type">Device Type</string>

    <string name="device_phone_number">Device Phone Number</string>
    <string name="device_password">Device Password</string>

    <string name="device_view_properties">Properties</string>
    <string name="device_view_connected_to">Connected To</string>
    <string name="device_view_battery_status">Battery Status</string>
    <string name="device_view_analog_1">Analog 1</string>
    <string name="device_view_analog2">Analog 2</string>
    <string name="device_view_dialog_1">Dialog 1</string>
    <string name="status_list">Status List</string>
    <string name="device_view_other_info">Other\nInfo</string>
    <string name="device_view_time_elapsed">Time\nElapsed</string>
    <string name="device_view_update_time">Update\nTime</string>


    <string name="send_msg_again">Please send the message again</string>
    <string name="error_send_msg">Error sending message!</string>
    <string name="msg_sent">message sent</string>

    <string name="title_activity_tabbed">Tabbed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_device_settings">DeviceSettings</string>

    <string name="authorization_number_tab">Authorization number</string>
    <string name="speeding_alert_geo_fence_tab">Speeding alert and geo fence</string>
    <string name="tracking_tab">Tracking</string>
    <string name="edit_device_details">Edit Device Details:</string>
    <string name="new_phonenumber">New PhoneNumber:</string>
    <string name="new_password">New Password :</string>
    <string name="verify_password">Verify Password</string>
    <string name="edit_account">Edit Account</string>
    <string name="previous_name">Previous name</string>
    <string name="new_name">New Name</string>
    <string name="forget_password">Forget Password</string>
    <string name="email">Email :</string>
    <string name="send_code">Send code</string>
    <string name="verification_code">Verification code</string>
    <string name="add_new_device">Add New Device</string>
    <string name="add_new_user">Add New User</string>
    <string name="add_new_account">Add New Account</string>
    <string name="edit_options">Edit Options:</string>
    <string name="new_options">New Options:</string>
    <string name="new_user">New User</string>
    <string name="filter">Filter</string>
    <string name="device_name">Device Name</string>
    <string name="new_account_name">New Account Name</string>
    <string name="notifications">Notifications</string>
    <string name="account_name">Account Name</string>
    <string name="new_device_name">New Device Name</string>

    <string name="select_by_map">"Select by map"</string>


    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="forget_detail_password">Forget Detail Password</string>
    <string name="via_email">via email</string>
    <string name="via_sms">Via sms - Coming Soon</string>
    <string name="make_selection_detail">Make Selection Detail</string>
    <string name="make_selection">Make Selection</string>
    <string name="login">Login</string>
    <string name="password_updated">Password Updated</string>
    <string name="new_credentials_details">New credentials Details</string>
    <string name="new_credentials">New Credentials</string>
    <string name="verify_code">Verify Code</string>

    <string name="description_code">description code</string>
    <string name="device_imei">Device IMEI</string>
    <string name="tracking">Tracking</string>
    <string name="add">Add</string>
    <string name="edit_user">Edit User</string>
    <string name="new_email">New Email</string>
    <string name="choose_user">Choose User</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_username">Change username</string>
    <string name="new_username">New username</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="zero">0</string>
    <string name="loading">Loading</string>
</resources>