<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TrackingSetting">

    <include
        layout="@layout/activity_back_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_white_background_frame"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="Tracking"
            android:layout_gravity="center"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/tracking_interval_1_s" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <EditText
                android:id="@+id/trackingintervale1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"

                android:ems="16"
                android:hint="@string/_numbersdevicesettings"
                android:inputType="number"
                android:textSize="10sp"


                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/tracking_interval_2_s" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <EditText
                android:id="@+id/trackingintervale2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:ems="16"
                android:hint="@string/_numbersdevicesettings"
                android:inputType="number"
                android:textSize="10sp"


                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/distance_m" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <EditText
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"

                android:ems="16"
                android:hint="@string/_numbersdevicesettings"
                android:inputType="number"
                android:textSize="10sp"

                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/heading_dir_deg" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <EditText
                android:id="@+id/headingdir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"

                android:ems="16"
                android:hint="@string/device_settings_degree"

                android:inputType="number"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <Button
            android:id="@+id/SpeedingAlertUpdateBtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_white_background_frame"
            android:onClick="SpeedingAlertUSecondUpdate"
            android:text="@string/update_btn_device_settings"
            tools:ignore="OnClick" />


        <ProgressBar
            android:id="@+id/trackingSettingsProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:outlineSpotShadowColor="@color/dark_blue"
            android:visibility="invisible"
            ></ProgressBar>
    </LinearLayout>

</LinearLayout>