<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.075"
        android:gravity="center_vertical"
        android:text="@string/device_view_properties"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.005"
        android:background="@drawable/gradient_color_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:text="@string/device_view_connected_to"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/device_view_connected_to_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="top"
            android:textColor="@color/light_blue"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.005"
        android:background="@drawable/gradient_color_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:text="@string/device_view_battery_status"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/device_view_battery_status_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="top"
            android:textColor="@color/light_blue"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.005"
        android:background="@drawable/gradient_color_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:text="@string/device_view_analog_1"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/device_view_analog1_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="top"
            android:textColor="@color/light_blue"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.005"
        android:background="@drawable/gradient_color_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:text="@string/device_view_analog2"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/device_view_analog2_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="top"
            android:textColor="@color/light_blue"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.005"
        android:background="@drawable/gradient_color_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:text="@string/device_view_dialog_1"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/device_view_dialog1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="top"
            android:textColor="@color/light_blue"
            android:textSize="14sp"/>
    </LinearLayout>


</LinearLayout>