<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EditUser">

    <include
        layout="@layout/activity_back_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/edit_user"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="@dimen/medium_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="@drawable/gradient_color_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/choose_user"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/small_text_size" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/edit_user_email_spinner"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@drawable/blue_shape_squares"
                android:spinnerMode="dialog"
                app:hintText="Choose user email" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_email"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/small_text_size" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55" />

            <EditText
                android:id="@+id/edit_user_new_email"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="0.07"
                android:background="@drawable/blue_shape_squares"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_phonenumber"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/small_text_size" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <EditText
                android:id="@+id/edit_user_new_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="0.5"
                android:background="@drawable/blue_shape_squares"
                android:ems="10"
                android:inputType="phone" />

        </LinearLayout>


        <Switch
            android:id="@+id/edit_user_notifications_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="left"
            android:shadowColor="@color/orange"
            android:showText="true"
            android:text="@string/notifications"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/small_text_size"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/track_selector"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/EditAccountUpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient_color_background"
            android:onClick="UpdateUserDetails"
            android:text="@string/update_btn_device_settings"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>


</LinearLayout>